# qibuild

./: .gitignore  .travis.yml  COPYING  README  README.rst  appveyor.yml  install-qibuild.sh  requirements.txt  setup.py
ci/: install.ps1
cmake/qibuild/cython/: general.cmake
cmake/qibuild/modules/: cython-config.cmake  cython-tools.cmake
cmake/qibuild/swig/: python.cmake
contrib/: demo.sh
cpp/: CMakeLists.txt  qiproject.xml
cpp/gui/: CMakeLists.txt
cpp/gui/config/: CMakeLists.txt  config_widget.cpp  config_widget.h  config_widget.ui  main.cpp  qibuild-config-gui.cpp
cpp/libqibuild/: CMakeLists.txt
cpp/libqibuild/qibuild/: config.cpp  config.hpp
cpp/libqibuild/src/: config_private.cpp  config_private.hpp
cpp/libqibuild/test/: CMakeLists.txt  test_qibuild_config.cpp
debian/: README.Debian  control  copyright  rules
doc/source/: changelog.rst  conf.py  relnotes.rst
doc/source/changes/: 3.12.rst
doc/source/ref/: index.rst
doc/tools/: gen_cmake_doc.py
python/: .gitignore  qicd.py  setup.py
python/qibuild/: cmake_builder.py  config.py  configstore.py  ctest.py  dlls.py  dylibs.py  gcov.py  parallel_builder.py  parsers.py  project.py  sh.py  test_runner.py  toc.py  wizard.py
python/qibuild/actions/: config.py  (+8 more)
python/qidoc/: sphinx_project.py
python/qipy/: python_builder.py  venv.py  worktree.py
python/qisrc/: git.py  qicd.py  status.py
python/qisys/: archive.py  command.py  interact.py  script.py  sh.py  version.py
python/qitoolchain/: __init__.py  database.py  feed.py  qipackage.py  toolchain.py
tools/: .gitignore  qicd.in.sh
(+52 files in other folders)
